--- a/style.css
+++ b/style.css
@@ -1,61 +1,104 @@
-.button {
-    border: 0px;
-    font-size: 16px;
-    border-radius: 5px;
-    color: #ffffff;
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
 }
 
-.button--theme-blue { 
-    background-color: #005bff;
+.row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
-
-.button--theme-light-blue {
-    background-color: #cfdefb;
+/*==============     строки */
+.row--justify-center {
+    justify-content: flex-end;
 }
 
-.button--theme-red {
-    background-color: rgb(255, 0, 0);
+.row--space-between {
+    justify-content: space-between;
 }
 
-.button--size-small {
-    padding: 2px 6px;
-}
-
-.button--size-medium {
-    padding: 6px 10px;
-}
-
-.button--size-large {
-    padding: 12px 20px;
-}
-
-.button--disabled {
-    background-color: #ff6868;
+.row--align-center {
+    align-items: center;
 }
 
 
-.price--theme-red {
-    color: red;
+.row--align-bottom {
+    align-items: end;
 }
 
-.price--theme-grey {
-    color: rgb(105, 105, 105);
+/*==============  колонки */
+.col {
+    padding-left: 10px;
+    padding-right: 10px;
+    box-sizing: border-box;
 }
 
-.price--theme-green {
-    color: rgb(54, 255, 67);
+.col--size-auto {
+    flex: 1;
 }
 
-.price--size-small {
-    font-size: 15px;
+.col--size-1 {
+    width: 8.3%;
 }
 
-.price--size-large {
-    font-size: 30px;
+.col--size-2 {
+    width: 16.6%;
 }
 
-.card__image {
-    width: 350px;
+.col--size-3 {
+    width: 25%;
+}
+
+.col--size-4 {
+    width: 33.3%;
+}
+
+.col--size-5 {
+    width: 41.6%;
+}
+
+.col--size-6 {
+    width: 50%;
+}
+
+.col--size-7 {
+    width: 58.3%;
+}
+
+.col--size-8 {
+    width: 66.6%;
+}
+
+.col--size-9 {
+    width: 75%;
+}
+
+.col--size-10 {
+    width: 75%;
+}
+
+.col--size-12 {
+    width: 100%;
+}
+
+.col--offset-2 {
+    margin-left: 16.6%;
+    width: 16.6%;
+}
+
+
+
+
+
+.block {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(166, 166, 166);
+    padding: 10px;
+}
+
+.block--size-1 {
     height: 200px;
 }
